--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 streamlit>=1.18.1
-pandas>=1.3.0
 wordcloud>=1.8.1
 matplotlib>=3.3.0
 plotly>=5.5.0
 scipy>=1.7.0
 statsmodels>=0.13.0
 openpyxl
+pandas==1.5.3
+joblib==1.3.2
+tqdm==4.65.0
+regex==2023.10.23
