--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ wordcloud>=1.8.1
 matplotlib>=3.3.0
 plotly>=5.5.0
 scipy>=1.7.0
-statsmodels>=0.13.0
+statsmodels
 openpyxl
-pandas==1.5.3
+pandas
 joblib
 tqdm
 regex
